테스트가 빌드가 안 돼...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,6 @@ if (CMAKE_EXPORT_COMPILE_COMMANDS)
   execute_process(
     COMMAND ${CMAKE_COMMAND} -E create_symlink
             ${CMAKE_BINARY_DIR}/compile_commands.json
-            ${CMAKE_SOURCE_DIR}/build/compile_commands.json
+            ${CMAKE_BINARY_DIR}/../compile_commands.json
   )
 endif()
